# cesiumjs_anywidget

./: .gitignore  .pre-commit-config.yaml  README.md  build.js  jest.config.js  package.json  pyproject.toml  run_tests.sh  setup_dev.sh  test_camera.py
.github/workflows/: release_and_publish.yml  tests.yml
.nblink/: environment.yml  nblink-lock.json
examples/: czml_demo.ipynb  czml_update_demo.ipynb  demo.ipynb  flight_radar_demo.ipynb  interaction_demo.ipynb  photorealistic_tiles_demo.ipynb
examples/photo_projection/: exif_utils.py
src/cesiumjs_anywidget/: __init__.py  exif_utils.py  geoid.py  index.js  logger.py  styles.css  widget.py
src/cesiumjs_anywidget/js/: camera-sync.js  index.js  logger.js  measurement-tools.js  point-picking.js  viewer-init.js
tests/: README.md  __init__.py  conftest.py  test_area_calculation.py  test_atmosphere.py  test_callback.py  test_exif_utils.py  test_geoid.py  test_integration.py  test_measurements.py  test_methods.py  test_multiple_data.py  test_photorealistic_tiles.py  test_sky_atmosphere.py  test_skybox.py  test_widget.py
tests/js/: README.md  camera-sync.test.js  logger.test.js  measurement-tools.test.js  setup.js  viewer-init.test.js
